correccion de errores en centro medico